<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name_logger">Statsnail Catch Logger</string>
    <string name="edit_text_hint"><font color='#91917f'>Enter Weight </font></string>

    <string name="spreadsheet_id">1zx1lZfMgQ3z_Ip-6QEnSK0W9YkrRoBI0xmYktvxDrvA</string>
    <string name="spreadsheet_read_range">catch log</string>

    <!--Sharedpreferences-->
    <string name="preference_file_key">preferences</string>
    <string name="snail_logging_mode">logging_mode</string>
    <string name="logging_mode_weighing">mode_weighing</string>
    <string name="logging_mode_grading">mode_grading</string>

    <string name="returned_from_app_settings_to_activity">Returned from app settings to ChooserActivity</string>
    <string name="user_logged_in" formatted="true">%s</string>
    <string name="content_authority_full">com.statsnail.roberts.statsnail.full</string>

    <!--Errors, info-->
    <string name="error_register_failed_connection">Failed to register catch! Check connection</string>
    <string name="error_register_failed">Failed to register catch!</string>
    <string name="toast_harvest_graded" formatted="true">Harvest number %d graded</string>
    <string name="toast_harvest_added" formatted="true">Harvest number %d registered</string>
    <string name="kg_as_measure">Kg</string>
    <string name="measure_in_kg" formatted="true">%s Kg</string>
    <string name="measure_in_kg_int" formatted="true">%d Kg</string>
    <string name="error_reading_sheet">Failed to read the online spreadsheet</string>
    <string name="harvest_number">Harvest No.</string>
    <string name="grading_button">Grade previous catches</string>
    <string name="weighing_button">Register today\'s catch</string>
    <string name="tab_harvest">Harvest</string>
    <string name="tab_tides">Tides</string>
    <string name="discard">Discard?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="periwinkle_grading">Periwinkle Grading</string>
    <string name="periwinkle_weighing">Periwinkle Weighing</string>
    <string name="weight_catch">Catch: </string>
    <string name="super_jumbo">Super Jumbo</string>
    <string name="jumbo">Jumbo</string>
    <string name="large">Large</string>
    <string name="date">Date</string>
    <string name="graded_by">Graded by</string>

    <!--Dialog-->
    <string name="grade_confirmation">Super Jumbo: %s\nJumbo: %s\nLarge: %s</string>
    <string name="weight_confirmation">Total weight: %s</string>

    <!--    Content Description    -->
    <string name="content_desc_weighing_button">Enter weighing activity</string>
    <string name="content_desc_grading_button">Enter grading activity</string>
    <string name="content_desc_user">Signed in user</string>
    <string name="content_desc_weighing_head">Weighing header</string>
    <string name="content_desc_catch_label">Catch label</string>
    <string name="content_desc_catch_weight">Catch weight is entered here</string>
    <string name="content_desc_catch_checkbox">Confirm weight Checkbox</string>
    <string name="content_desc_weighing_fab">Press to Add catch</string>
    <string name="content_desc_kg_label">Weights measured in kilos</string>

    <string name="content_desc_grading_head">Grading header</string>
    <string name="content_desc_super_label">Super jumbo label</string>
    <string name="content_desc_jumbo_label">Jumbo label</string>
    <string name="content_desc_large_label">Large label</string>
    <string name="content_desc_harvno_label">Harvest number label</string>
    <string name="content_desc_grade_weight">Weight input</string>
    <string name="content_desc_spinner">Spinner containing harvest numbers</string>
    <string name="content_desc_log_list">List of logs</string>
</resources>