<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/g_top_margin"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.statsnail.roberts.statsnail.fragments.HarvestChooserFragment"
    tools:showIn="@layout/fragment_chooser">

    <Button
        android:id="@+id/open_weighing_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_double"
        android:background="@color/colorPrimary_700"
        android:contentDescription="@string/content_desc_weighing_button"
        android:nextFocusDown="@+id/open_grading_button"
        android:nextFocusForward="@+id/open_grading_button"
        android:text="@string/weighing_button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />
<!--
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp" />-->


    <Button
        android:id="@+id/open_grading_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_double"
        android:background="@color/colorPrimary_700"
        android:contentDescription="@string/content_desc_grading_button"
        android:nextFocusUp="@id/open_weighing_button"
        android:text="@string/grading_button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />
</LinearLayout>
