<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_container"
    app:cardCornerRadius="4dp"
    app:cardElevation="0.7dp"
    app:cardMaxElevation="1dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    app:contentPaddingBottom="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:layout_below="@id/cardview_container_b"
    android:layout_margin="16dp"
    android:contentDescription="@string/content_desc_log_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_checkbox"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harvest_number" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/activity_margin"
                    android:paddingEnd="@dimen/activity_margin"
                    android:text="@string/date" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/tv_label_graded_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graded_by" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_harvest_log"
                app:reverseLayout="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

<!--            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_post_data"
                app:elevation="6dp"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/fab_margin"
                android:contentDescription="@string/content_desc_weighing_fab"
                android:nextFocusDown="@id/super_jumbo_et"
                android:nextFocusUp="@id/confirm_checkbox"
                android:scaleType="center"
                android:src="@android:drawable/ic_menu_add" />-->
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>